пару мелких изменений

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
                               <td style="width: 542px; height: 93px; text-align: right">
                                     <ul style="margin: 37px 0 0 25px;">
                                       <li style="float: left;margin-left: 15px;list-style-type: none;">
-                                        <a style="color: #46b4da; text-decoration: none;" href="">SHAWLS</a>
+                                        <a style="color: #46b4da; text-decoration: none;" href="#">SHAWLS</a>
                                       </li>
                                       <li style="float: left;margin-left: 15px;list-style-type: none;">
-                                        <a style="color: #46b4da; text-decoration: none;" href="">CLOTHING</a>
+                                        <a style="color: #46b4da; text-decoration: none;" href="#">CLOTHING</a>
                                       </li>
                                       <li style="float: left;margin-left: 15px;list-style-type: none;">
-                                        <a style="color: #46b4da; text-decoration: none;" href="">BAGS</a>
+                                        <a style="color: #46b4da; text-decoration: none;" href="#">BAGS</a>
                                       </li>
                                       <li style="float: left;margin-left: 15px;list-style-type: none;">
-                                        <a style="color: #46b4da; text-decoration: none;" href="">ACCESSORIES</a>
+                                        <a style="color: #46b4da; text-decoration: none;" href="#">ACCESSORIES</a>
                                       </li>
                                       <li style="float: left;margin-left: 15px;list-style-type: none;">
-                                        <a style="color: #46b4da; text-decoration: none;" href="">SALE</a>
+                                        <a style="color: #46b4da; text-decoration: none;" href="#">SALE</a>
                                       </li>
                                     </ul>
                               </td>
@@ -212,13 +212,13 @@
 
                                             <tr>
                                               <td style="vertical-align: top">
-                                                <p style="margin: 6px 0 0 0; color: black; font-family: Verdana, sans-serif; font-size: 12.5px;
+                                                <p style="margin: 0 0 0 0; color: black; font-family: Verdana, sans-serif; font-size: 12.5px;
                                               ">
                                                   Интернет магазин «ButterflyUA»
                                                 </p>
                                               </td>
-                                              <td>
-                                                <p style="margin: 0 0 0 0; color: black; font-family: Verdana, sans-serif; font-size: 12.5px;
+                                              <td style="vertical-align: top">
+                                                <p style="margin: 2px 0 0 0; color: black; font-family: Verdana, sans-serif; font-size: 12.5px;
                                               ">
                                                    +3 8093 777 77 77
                                                 </p>
@@ -228,7 +228,7 @@
                                                 </p>
                                               </td>
                                               <td style="vertical-align: top">
-                                                <p style="margin: 6px 0 0 0; color: black; font-family: Verdana, sans-serif; font-size: 12.5px;
+                                                <p style="margin: 0 0 0 0; color: black; font-family: Verdana, sans-serif; font-size: 12.5px;
                                                  ">
                                                   <a href="mailto:" title="подписаться на новости" style="text-decoration: underline; color: black">подписаться на новости</a>
                                                 </p>
@@ -246,13 +246,13 @@
                                         <tr style="text-align: right;">
                                           <td style="width:70%;"></td>
                                           <td style=" height: 60px;vertical-align: bottom;">
-                                            <a href=""><img src="img/f.png" alt="" width="40px" ></a>
+                                            <a href="https://facebook.com" target="_blank"><img src="img/f.png" alt="" width="40px" ></a>
                                           </td>
                                           <td style="height: 60px;vertical-align:bottom;">
-                                            <a href=""><img src="img/d.png" alt="" width="40px"></a>
+                                            <a href="https://pinterest.com" target="_blank"><img src="img/d.png" alt="" width="40px"></a>
                                             </td>
                                             <td style="height: 60px;vertical-align: bottom">
-                                            <a href=""><img src="img/i.png" alt="" width="40px"></a>
+                                            <a href="https://instagram.com" target="_blank"><img src="img/i.png" alt="" width="40px"></a>
                                           </td>
                                         </tr>
 
